@@ -1,3 +1,8 @@
+2006-09-21  Claes NÃ¤stÃ©n  <me{@}pekdon{.}net>
+
+	* src/PixmapHandler.cc (PixmapHandler::returnPixmap): 
+	Use map for pixmap handler instead of list.
+
 2006-09-11  Claes Nästén  <me{@}pekdon{.}net>
 
 	* src/ActionHandler.cc (ActionHandler::findClientFromTitle): 
